🐺🍟 Checkpoint ./views/partials/vieworder.ejs:10221761/292 ./views/orders.ejs:10221761/10 ./views/index.ejs:10221761/96

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -5,7 +5,7 @@
 <% if (locals.customers){%>
 <h1>Orders</h1>
 <%- include("partials/vieworder") %>
-Goals for this page: create purchases, create claims based on purchases, view purchases ✓
+Goals for this page: create purchases(orders), create claims based on purchases, view purchases ✓
 
 
 
