⛹🏗 Checkpoint ./views/partials/vieworder.ejs:10221761/36077

--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -1,161 +1,6 @@
-<% if (locals.productPurchases){%>
+<% if (locals.productPurchases)%>
 <%- include("header") %>
-
-<!-- purchase
-claims
-customers
-productPurchases
-products
-purchaseid -->
-
-  <% var datePurchase = new Date(purchase[purchaseid-1].date) %>
-  <% var datePurchase = (datePurchase.getMonth()+1) + "/" + datePurchase.getDate() + "/" +  datePurchase.getFullYear() %>
-<div>
-<h1>Order</h1>
-  <h3>
-    <b>Customer: </b><%=customers[purchase[purchaseid-1].customerid-1].firstname%> <%=customers[purchase[purchaseid-1].customerid-1].lastname%>
-  </h3>
-  <h3>
-    <b>Total Cost: </b><%=purchase[purchaseid-1].totalcost%>
-  </h3>
-  <h3>
-    <b>Date: </b><%=datePurchase%> 
-  </h3>
-</div>      
-
-<table id="table" class="table table-hover">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Product</th>
-      <th>Product ID</th>
-      <th>Item Number</th>
-      <th>Unit Cost</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% productPurchases.forEach(result=>{ %>
-    <tr>
-      <td>
-      <%var existingclaim = "false" %>
-      <% claims.forEach(claim=>{ %>
-      <% if (claim.productpurchaseid===result.productpurchaseid){%>
-        <%existingclaim = "true" %>
-      <% }%>
-     <%})%>
-     <% if (existingclaim = "true"){%>
-        <%}else{%>
-                <button onclick="claimModal()">Create Claim </button>
-
-        <button >VIEW Claim </button>
-      <% }%>
-     <%})%>        
-      </td>
-      <td><%=products[result.productid -1].name%></td>
-      <td><%=result.productid%></td>
-      <td><%=result.productpurchaseid%></td>
-      <td><%=products[result.productid -1].unitcost%></td>
-     </tr> 
-  <%})%>
-  </tbody>
-</table>
-
-
 <button><a href="/orders">Return</a></button>
 
-<div id="createClaimModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span><!-- close button -->
-    <div class="d-flex justify-content-center flex-column">
-      <form id="updateform">  
-        <div><b>First Name: </b><input value="" id="firstname" type="text" > </div>
-        <div><b>Last Name: </b><input value="" id="lastname" type="text" > </div>
-        <div><b>Title: </b><input placeholder="Support or Admin" value="" id="title" type="text" > </div>
-        <div><b>Email: </b><input value="" id="email"  type="text" > </div>
-        <div><b>Phone Number: </b><input value="" id="phone" type="text" > </div>
-        <div><b>Street Address: </b><input value="" id="address1" type="text" > </div>
-        <div><b>Street Address 2: </b><input value="" id="address2" type="text" > </div>
-        <div><b>City : </b><input value="" id="city"  type="text" > </div>
-        <div><b>State(Abr): </b><input value="" id="state" type="text" > </div>
-        <div><b>Zip: </b><input value="" id="zip"  type="text" > </div>
-        <button onclick="update();">Submit New Employee</button>
-      </form>
-    </div>
-  </div>
-</div>
-<script type=text/javascript>
- 
-  function claimModal() {
-    var modal = document.getElementById("createClaimModal"); 
-    var closeBtn = document.getElementsByClassName("close")[0];
-    modal.style.display = "block";
-    //close out of modal either when clicking 'x' 
-    closeBtn.onclick = function() {
-      modal.style.display = "none";
-    }
-    //or close modal when clicking outside of the modal
-    window.onclick = function(event) {
-      if (event.target == modal) {
-      modal.style.display = "none";
-      }
-    }
-  }    
-  
-   function preview(element) {
-    //grabbing element information from html to populate modal depending on which product row was selected
-    var phone=element.name.split(";")[0];
-    var email=element.name.split(";")[1];
-    var title=element.name.split(";")[2];
-    var name=element.name.split(";")[3];
-    var modal = document.getElementById("employeeInfo"); 
-    var closeBtn = document.getElementsByClassName("close")[0];
-    document.getElementById("empPhone").innerHTML=phone;
-    document.getElementById("empEmail").innerHTML=email;
-    document.getElementById("empTitle").innerHTML=title;
-    document.getElementById("empName").innerHTML=name;
-    // document.getElementById("claimsBtn").action="/products/claims/"+productid;
-    modal.style.display = "block";
-     //close out of modal either when clicking 'x' 
-    closeBtn.onclick = function() {
-      modal.style.display = "none";
-    }
-    //or close modal when clicking outside of the modal
-    window.onclick = function(event) {
-      if (event.target == modal) {
-      modal.style.display = "none";
-      }
-    }
-  }//end function modal(element)
-  
-  function update(){ 
-    fetch('https://ejs-views-practice.glitch.me/api/employees/address', {
-        headers:{
-          "content-type":"application/json",
-        },
-        body: JSON.stringify({
-          city:document.getElementById("city").value,
-          state:document.getElementById("state").value,
-          streetaddress:document.getElementById("address1").value,
-          streetaddress2:document.getElementById("address2").value,
-          zip:document.getElementById("zip").value,
-          email:document.getElementById("email").value,
-          firstname:document.getElementById("firstname").value,
-          lastname:document.getElementById("lastname").value,
-          phone:document.getElementById("phone").value,
-          title:document.getElementById("phone").value
-        }),
-            method: 'POST'
-        }).then(resp=>{
-        }, err=>{
-          console.log(err);
-        })
-      location = location //refresh
-  }
-  
-</script>
-
-
-
-
-<%- include("footer") %>
+<%- include("f") %>
 <%}%>
