--- a/views/partials/vieworder.ejs
+++ b/views/partials/vieworder.ejs
@@ -56,35 +56,41 @@ employees -->
       <td><%=products[result.productid -1].unitcost%></td>
      </tr>
     
-<div id="createClaimModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span><!-- close button -->
-    <div class="d-flex justify-content-center flex-column">
-      <form id="updateform"> 
-          issueid,  
-          description,
-          employeeid
-        <div id="info" name='<%=result.productpurchaseid%>;<%=result.productid%>;<%=result.name%>'></div>
-        <div><b>Description: </b><input value="" id="description" type="text" > </div>
-        <div><b>Last Name: </b><input value="" id="lastname" type="text" > </div>
-        <div><b>Title: </b><input placeholder="Support or Admin" value="" id="title" type="text" > </div>
-        <div>
-          <b>Issue: </b>
-          <select id="issueList">
-          <% if (locals.issues) { %> 
-            <% issues.forEach(issue=>{ %>
-            <option value='<%=issue.id%>'><%=issue.name %></option>
-            <% } )%>
-          <% } %>
-          </select>
-        </div>
-        <div>
+<!--  Create Claim Modal  -->
+  <div id="createClaimModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span><!-- close button -->
+      <div class="d-flex justify-content-center flex-column">
+        <form id="updateform"> 
+          <div>
+            <b>Percieved Issue: </b>
+            <select id="issueList">
+            <% if (locals.issues) { %> 
+              <% issues.forEach(issue=>{ %>
+              <option value='<%=issue.id%>'><%=issue.name %></option>
+              <% } )%>
+            <% } %>
+            </select>
+          </div>
+          <div>
+          <div>
+            <b>Assign Claim to: </b>
+            <select id="employeeList">
+            <% if (locals.employees) { %> 
+              <% employees.forEach(employee=>{ %>
+              <option value='<%=employee.employeeid%>'><%=employee.firstname %> <%=employee.lastname %></option>
+              <% } )%>
+            <% } %>
+            </select>
+          </div>
+          <div>
 
-        <button onclick="update();">Submit Customer Claim</button>
-      </form>
+          <div><b>Description: </b><input value="" id="description" type="text" > </div>
+          <button onclick="update();">Submit Customer's Claim</button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
     
   <%})%>
   </tbody>
@@ -94,11 +100,9 @@ employees -->
 <button><a href="/orders">Return</a></button>
 
 
-
 <script type=text/javascript>
  
   function claimModal() {
-    
     var modal = document.getElementById("createClaimModal"); 
     var closeBtn = document.getElementsByClassName("close")[0];
     modal.style.display = "block";
@@ -114,7 +118,7 @@ employees -->
     }
   }    
   
-   function preview(element) {
+   function update() {
     //grabbing element information from html to populate modal depending on which product row was selected
     var phone=element.name.split(";")[0];
     var email=element.name.split(";")[1];
@@ -147,7 +151,7 @@ employees -->
         },
         body: JSON.stringify({
           productpurchaseid,
-          issueid,  
+          issueid: issueList  
           description,
           employeeid
           
