🌓🚠 Checkpoint ./views/partials/vieworder.ejs:10221761/720 ./views/partials/claim-edit.ejs:10221761/11

--- a/views/partials/claim-edit.ejs
+++ b/views/partials/claim-edit.ejs
@@ -46,7 +46,7 @@
             <% } %>
           </select>
         </div>
-        <% if (locals.comments) { %>  
+        <% if (locals.comments.length >0 ) { %>  
         <div>
          <b>Comments: </b>
           <table class="table table-striped table-bordered">
