💝🏵 Checkpoint ./routes/api.js:10221761/32 ./views/orders.ejs:10221761/246

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -5,9 +5,11 @@
 <% if (locals.customers){%>
 <h1>Orders</h1>
 <%- include("partials/vieworder") %>
-Goals for this page: create purchases(orders), create claims based on purchases, view purchases ✓
+<p>
+  Goals for this page: create purchases(orders), create claims based on purchases, view purchases ✓
+</p>
 
-
+<button>Create Order</button>
 
 <table id="table" class="table table-hover">
   <thead>
