--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -9,7 +9,7 @@
   Goals for this page: create purchases(orders), create claims based on purchases, view purchases ✓
 </p>
 
-<button>Create Order</button>
+<button onclick="orderModal()">Create Order</button>
 
 <table id="table" class="table table-hover">
   <thead>
@@ -53,11 +53,18 @@
             <% } %>
             </select>
           </div>
-          <div><button>+</button>Add Product Purchase</div>
-        
-            <span id="purchaseid"></span>
-            <div><b>Description: </b><input value="" id="description" type="text" > </div>
-          <button onclick="update();">Submit Customer's Claim</button>
+          <b>Products Purchased:</b>
+          <div class="product">
+            <select id="productList">
+            <% if (locals.products) { %> 
+              <% products.forEach(product=>{ %>
+              <option value='<%=product.productid%>;<%=product.unitcost%>'><%=product.name%></option>
+              <% } )%>
+            <% } %>
+            </select>
+          </div>          
+          <div><button onclick="createProductDiv()">+</button>Add Product Purchase</div>
+          <button onclick="update();">Submit New Order</button>
         </form>
       </div>
     </div>
@@ -71,21 +78,31 @@
 <%}%>
 
 <script>
- function employeeModal() {
-    var modal = document.getElementById("newEmployeeModal"); 
-    var closeBtn = document.getElementsByClassName("close")[0];
-    modal.style.display = "block";
-    //close out of modal either when clicking 'x' 
-    closeBtn.onclick = function() {
-      modal.style.display = "none";
-    }
-    //or close modal when clicking outside of the modal
-    window.onclick = function(event) {
-      if (event.target == modal) {
-      modal.style.display = "none";
+  function createProductDiv(){
+    
+  }
+  
+  function orderModal() {
+      var modal = document.getElementById("createOrderModal"); 
+      var closeBtn = document.getElementsByClassName("close")[0];
+      modal.style.display = "block";
+      //close out of modal either when clicking 'x' 
+      closeBtn.onclick = function() {
+        modal.style.display = "none";
       }
-    }
+      //or close modal when clicking outside of the modal
+      window.onclick = function(event) {
+        if (event.target == modal) {
+        modal.style.display = "none";
+        }
+      }
   } 
+  
+  function createProductDiv(){
+    
+  }
+  
+
 </script>
 
 
