👫🎸 Checkpoint ./views/orders.ejs:10221761/777

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -84,9 +84,15 @@
   });
   
   function createProductDiv(products){
-    var select = document.createElement('select');
-    select.setAttribute("id", count)
-    document.getElementById('product').appendChild(select)
+     var x = document.createElement("div");
+  // x.setAttribute("id", "mySelect");
+    document.getElementById('product').appendChild(x)
+
+//   var z = document.createElement("option");
+//   z.setAttribute("value", "volvocar");
+//   var t = document.createTextNode("Volvo");
+//   z.appendChild(t);
+//   document.getElementById("mySelect").appendChild(z);
   }
   
   function orderModal() {
