🎓🌴 Checkpoint ./views/orders.ejs:10221761/4

--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -84,7 +84,7 @@
   });
   
   function createProductDiv(products){
-     var x = document.createElement("div");
+     var x = document.createElement(div);
   // x.setAttribute("id", "mySelect");
     document.getElementById('product').appendChild(x)
 
