--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -63,7 +63,7 @@
             <% } %>
             </select>
           </div>          
-          <div><button onclick="createProductDiv()">+</button>Add Product Purchase</div>
+          <div><button onclick="createProductDiv();">+</button>Add Product Purchase</div>
           <button id="updateBtn" onclick="update();">Submit New Order</button>
         </form>
       </div>
@@ -104,17 +104,12 @@
         modal.style.display = "none";
       }
       //or close modal when clicking outside of the modal
-      window.onclick = function(event) {
-        if (event.target == modal) {
-        modal.style.display = "none";
-        }
-      }
+      // window.onclick = function(event) {
+      //   if (event.target == modal || !modal.contains(event.target)) {
+      //   modal.style.display = "none";
+      //   }
+      // }
   } 
-  
-  function createProductDiv(){
-    
-  }
-  
 
 </script>
 
